--- a/smappdragon-tutorial-link-analysis.ipynb
+++ b/smappdragon-tutorial-link-analysis.ipynb
@@ -5,17 +5,33 @@
    "metadata": {},
    "source": [
     "# Analyzing Links using SmappDragon\n",
+    "by [Leon Yin](twitter.com/leonyin)<br>\n",
+    "2018-02-16\n",
+    "\n",
     "This Tutorial shows how to \n",
-    "1. Download tweets from Twitter using Tweepy,\n",
-    "2. Filter and parse tweets using SmappDragon,\n",
-    "3. Create a link metadata table using SmappDragon, and\n",
-    "4. Analyze links from questionable websites using Pandas and the OpenSources.co dataset."
+    "1. <a href=\"#tweep\">Download tweets from Twitter using Tweepy</a>,\n",
+    "2. <a href=\"#filter\">Filter and parse tweets using SmappDragon</a>,\n",
+    "3. <a href=\"#link\">Create a link metadata table using SmappDragon</a>, and\n",
+    "4. <a href=\"#fake\">Analyze links from questionable websites using Pandas and the OpenSources.co dataset</a>.\n",
+    "\n",
+    "View this on [Github](https://github.com/yinleon/smappdragon-tutorials/blob/master/smappdragon-tutorial-link-analysis.ipynb).\n",
+    "View this on [NBViewer](https://nbviewer.jupyter.org/github/yinleon/smappdragon-tutorials/blob/master/smappdragon-tutorial-link-analysis.ipynb).\n",
+    "Visit my Lab's [website](https://wp.nyu.edu/smapp/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Downloading Tweets with Tweepy <a id='tweep'>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 163,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!pip install requirements.txt"
@@ -72,7 +88,7 @@
    },
    "outputs": [],
    "source": [
-    "screen_name = 'seanhannity'\n",
+    "screen_name = 'seanhannity' # can also use user_id!\n",
     "tweet_file = 'tweets.json'"
    ]
   },
@@ -415,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Crunching Numbers\n",
+    "## Crunching Numbers <a id=\"filter\">\n",
     "We can study the structure of each tweet, and crunch some numbers.<br>\n",
     "For this example let's count who the user is tweeting with?"
    ]
@@ -705,7 +721,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Link Analysis\n",
+    "## Link Analysis <a id=\"link\">\n",
     "Let's strip all the links out of the tweet.<br>\n",
     "We can't just return the value, as there can be multiple links per Tweet.<br>\n",
     "We can solve this by using a generator, and unpacking each using `itertools`."
@@ -714,7 +730,9 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import itertools\n",
@@ -902,7 +920,9 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_links = df_links[df_links['link.domain'] != 'twitter.com']"
@@ -940,7 +960,9 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def resolve_shortened_link(link):\n",
@@ -1060,7 +1082,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_links.loc[:, 'link.domain'] = df_links.apply(resolve_shortened_link, axis=1)"
@@ -1203,7 +1227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Questionable Media Domains\n",
+    "## Questionable Media Domains <a id=\"fake\">\n",
     "We can use the open sources dataset to filter domains on various criteria.<br>\n",
     "Here is a <a href=\"https://nbviewer.jupyter.org/github/yinleon/fake_news/blob/master/opensources-lite.ipynb\">notebook</a> that makes the data machine-readible."
    ]
@@ -1211,7 +1235,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "opensorces_clean_url = 'https://raw.githubusercontent.com/yinleon/fake_news/master/data/sources_clean.tsv'\n",
@@ -1372,7 +1398,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_questionable = pd.merge(left= df_links, left_on= 'link.domain', \n",
