--- a/smappdragon-tutorial-link-analysis.ipynb
+++ b/smappdragon-tutorial-link-analysis.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Downloading Tweets with Tweepy <a id='tweep'>"
+    "## Downloading Tweets with Tweepy <a id='tweep'></a>"
    ]
   },
   {
@@ -431,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Crunching Numbers <a id=\"filter\">\n",
+    "## Crunching Numbers <a id=\"filter\"></a>\n",
     "We can study the structure of each tweet, and crunch some numbers.<br>\n",
     "For this example let's count who the user is tweeting with?"
    ]
@@ -721,7 +721,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Link Analysis <a id=\"link\">\n",
+    "## Link Analysis <a id=\"link\"></a>\n",
     "Let's strip all the links out of the tweet.<br>\n",
     "We can't just return the value, as there can be multiple links per Tweet.<br>\n",
     "We can solve this by using a generator, and unpacking each using `itertools`."
@@ -1227,7 +1227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Questionable Media Domains <a id=\"fake\">\n",
+    "## Questionable Media Domains <a id=\"fake\"></a>\n",
     "We can use the open sources dataset to filter domains on various criteria.<br>\n",
     "Here is a <a href=\"https://nbviewer.jupyter.org/github/yinleon/fake_news/blob/master/opensources-lite.ipynb\">notebook</a> that makes the data machine-readible."
    ]
