--- a/smappdragon-tutorial-link-analysis.ipynb
+++ b/smappdragon-tutorial-link-analysis.ipynb
@@ -59,6 +59,7 @@
    },
    "outputs": [],
    "source": [
+    "# fill these in with your Twitter API credentials, I store them as enviornment variables.\n",
     "consumer_key = os.environ.get('TWEEPY_API_KEY')\n",
     "consumer_secret = os.environ.get('TWEEPY_API_SECRET')\n",
     "access_key = os.environ.get('TWEEPY_ACCESS_TOKEN')\n",
@@ -88,8 +89,14 @@
    },
    "outputs": [],
    "source": [
-    "screen_name = 'seanhannity' # can also use user_id!\n",
-    "tweet_file = 'tweets.json'"
+    "screen_name = 'seanhannity'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use the tweepy `Cursor` to hit the Twitter API for up to 3.2K tweets per user."
    ]
   },
   {
@@ -112,8 +119,36 @@
     "user_tweets= []\n",
     "for tweet in tweepy.Cursor(api.user_timeline, screen_name=screen_name).items():\n",
     "    user_tweets.append(tweet._json)\n",
-    "\n",
     "len(user_tweets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's store this data in a new directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!mkdir ./data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tweet_file = './data/tweets.json'"
    ]
   },
   {
@@ -127,6 +162,14 @@
     "with open(tweet_file, 'w') as f:\n",
     "    for tweet in user_tweets:\n",
     "        f.write(json.dumps(tweet) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We could work with this JSON in a variety of ways.<br>\n",
+    "At my lab we created a module which works wih JSON records in a `collection` object."
    ]
   },
   {
@@ -194,7 +237,7 @@
     "## What is  generator?\n",
     "A generator is an interator that only keeps track of location.<br>\n",
     "In other words, the entirety of the tweet json is not held in memory.<br>\n",
-    "They are created by functions that yield objects, rather than return objects."
+    "They are created by functions that _yield_ objects, rather than _return_ objects."
    ]
   },
   {
@@ -240,6 +283,15 @@
    ],
    "source": [
     "gen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that this is similar to what is returned from `collect.get_iterator()`.<br>\n",
+    "We access the values in a generator by iterating through it.<br>\n",
+    "For loops are the easiest way to iterate."
    ]
   },
   {
@@ -421,10 +473,16 @@
     }
    ],
    "source": [
-    "for i, tweet in enumerate(collect.get_iterator()):\n",
-    "    if i <= 1:\n",
-    "        print(json.dumps(tweet, indent=2))\n",
+    "for tweet in collect.get_iterator():\n",
+    "    print(json.dumps(tweet, indent=2))\n",
     "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We're breaking only because we don't want to print all the tweets in our json file."
    ]
   },
   {
@@ -434,33 +492,6 @@
     "## Crunching Numbers <a id=\"filter\"></a>\n",
     "We can study the structure of each tweet, and crunch some numbers.<br>\n",
     "For this example let's count who the user is tweeting with?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'hashtags': [{'indices': [115, 123], 'text': 'Hannity'}],\n",
-       " 'symbols': [],\n",
-       " 'urls': [],\n",
-       " 'user_mentions': [{'id': 20118767,\n",
-       "   'id_str': '20118767',\n",
-       "   'indices': [21, 32],\n",
-       "   'name': 'Gina Gentry Loudon',\n",
-       "   'screen_name': 'RealDrGina'}]}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tweet['entities']"
    ]
   },
   {
@@ -505,6 +536,13 @@
     "        counter.update([user['screen_name']])\n",
     "    \n",
     "counter.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also created conditional statements to filter the data."
    ]
   },
   {
@@ -723,7 +761,7 @@
    "metadata": {},
    "source": [
     "## Link Analysis <a id=\"link\"></a>\n",
-    "Let's strip all the links out of the tweet.<br>\n",
+    "Let's parse out all the links out of the tweet.<br>\n",
     "We can't just return the value, as there can be multiple links per Tweet.<br>\n",
     "We can solve this by using a generator, and unpacking each using `itertools`."
    ]
@@ -926,36 +964,15 @@
    },
    "outputs": [],
    "source": [
+    "# filter out Twitter links\n",
     "df_links = df_links[df_links['link.domain'] != 'twitter.com']"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['https://www.hannity.com/media-room/capitol-revolt-senate-rebukes-trump-immigration-plan-daca-in-limbo/',\n",
-       " 'https://www.hannity.com/media-room/nice-try-the-view-blows-off-anti-christian-comments-says-joy-was-joking/',\n",
-       " 'https://www.hannity.com/media-room/red-flag-fbi-claims-they-couldnt-identify-florida-shooter-despite-2017-tip/',\n",
-       " 'https://www.hannity.com/media-room/kims-nightmare-north-korea-convinced-trump-will-attack-begs-south-korea-for-help/',\n",
-       " 'https://www.hannity.com/media-room/doj-disgrace-doj-official-concealed-fusion-gps-payments-from-department/',\n",
-       " 'https://www.hannity.com/media-room/florida-massacre-heres-what-we-know-about-suspect-nikolas-cruz/',\n",
-       " 'https://www.hannity.com/media-room/breaking-reports-of-active-shooter-at-florida-high-school-gunman-still-at-large/',\n",
-       " 'https://www.hannity.com/media-room/comey-chaos-susan-rices-unusual-email-raises-new-questions-about-comeys-testimony/',\n",
-       " 'https://www.hannity.com/media-room/crumbs-act-house-republicans-unveil-pelosi-inspired-bonus-bill/',\n",
-       " 'https://www.hannity.com/media-room/behar-goes-nuclear-the-view-host-calls-pences-christian-faith-a-mental-illness/']"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df_links['link.url_long'].tolist()[:10]"
+    "We can also expand shortened links fron bit.ly"
    ]
   },
   {
@@ -978,119 +995,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>link.domain</th>\n",
-       "      <th>link.url_long</th>\n",
-       "      <th>link.url_short</th>\n",
-       "      <th>tweet.created_at</th>\n",
-       "      <th>tweet.id</th>\n",
-       "      <th>tweet.text</th>\n",
-       "      <th>user.id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>hannity.com</td>\n",
-       "      <td>https://www.hannity.com/media-room/capitol-rev...</td>\n",
-       "      <td>https://t.co/31pzBs5ulS</td>\n",
-       "      <td>Thu Feb 15 21:56:52 +0000 2018</td>\n",
-       "      <td>964257227900116993</td>\n",
-       "      <td>https://t.co/31pzBs5ulS</td>\n",
-       "      <td>41634520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>hannity.com</td>\n",
-       "      <td>https://www.hannity.com/media-room/nice-try-th...</td>\n",
-       "      <td>https://t.co/FVWAi8hzlH</td>\n",
-       "      <td>Thu Feb 15 21:14:18 +0000 2018</td>\n",
-       "      <td>964246514561363974</td>\n",
-       "      <td>Nice try Joy https://t.co/FVWAi8hzlH</td>\n",
-       "      <td>41634520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>hannity.com</td>\n",
-       "      <td>https://www.hannity.com/media-room/red-flag-fb...</td>\n",
-       "      <td>https://t.co/BltIZp6vOd</td>\n",
-       "      <td>Thu Feb 15 20:18:17 +0000 2018</td>\n",
-       "      <td>964232417107173376</td>\n",
-       "      <td>WATCH: FBI Agent comments on claims the bureau...</td>\n",
-       "      <td>41634520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>hannity.com</td>\n",
-       "      <td>https://www.hannity.com/media-room/kims-nightm...</td>\n",
-       "      <td>https://t.co/f4tD4ORZz6</td>\n",
-       "      <td>Thu Feb 15 19:27:29 +0000 2018</td>\n",
-       "      <td>964219633992691713</td>\n",
-       "      <td>Crisis in Korea https://t.co/f4tD4ORZz6</td>\n",
-       "      <td>41634520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>hannity.com</td>\n",
-       "      <td>https://www.hannity.com/media-room/doj-disgrac...</td>\n",
-       "      <td>https://t.co/aelFbg9QI9</td>\n",
-       "      <td>Thu Feb 15 17:35:13 +0000 2018</td>\n",
-       "      <td>964191379638358016</td>\n",
-       "      <td>Another smoking gun? https://t.co/aelFbg9QI9</td>\n",
-       "      <td>41634520</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   link.domain                                      link.url_long  \\\n",
-       "2  hannity.com  https://www.hannity.com/media-room/capitol-rev...   \n",
-       "3  hannity.com  https://www.hannity.com/media-room/nice-try-th...   \n",
-       "4  hannity.com  https://www.hannity.com/media-room/red-flag-fb...   \n",
-       "5  hannity.com  https://www.hannity.com/media-room/kims-nightm...   \n",
-       "6  hannity.com  https://www.hannity.com/media-room/doj-disgrac...   \n",
-       "\n",
-       "            link.url_short                tweet.created_at  \\\n",
-       "2  https://t.co/31pzBs5ulS  Thu Feb 15 21:56:52 +0000 2018   \n",
-       "3  https://t.co/FVWAi8hzlH  Thu Feb 15 21:14:18 +0000 2018   \n",
-       "4  https://t.co/BltIZp6vOd  Thu Feb 15 20:18:17 +0000 2018   \n",
-       "5  https://t.co/f4tD4ORZz6  Thu Feb 15 19:27:29 +0000 2018   \n",
-       "6  https://t.co/aelFbg9QI9  Thu Feb 15 17:35:13 +0000 2018   \n",
-       "\n",
-       "             tweet.id                                         tweet.text  \\\n",
-       "2  964257227900116993                            https://t.co/31pzBs5ulS   \n",
-       "3  964246514561363974               Nice try Joy https://t.co/FVWAi8hzlH   \n",
-       "4  964232417107173376  WATCH: FBI Agent comments on claims the bureau...   \n",
-       "5  964219633992691713            Crisis in Korea https://t.co/f4tD4ORZz6   \n",
-       "6  964191379638358016       Another smoking gun? https://t.co/aelFbg9QI9   \n",
-       "\n",
-       "    user.id  \n",
-       "2  41634520  \n",
-       "3  41634520  \n",
-       "4  41634520  \n",
-       "5  41634520  \n",
-       "6  41634520  "
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df_links.head()"
+    "We use the `apply()` function on a Pandas dataframe to apply a function to entire rows (`axis=1`) or columns (`axis=2`)"
    ]
   },
   {
